# Band-of-Agents-Hackathon

./: .env.example  .gitignore  BAND_RUNTIME.md  README.md  REPORT.md  agent_config.example.yaml  agent_config.yaml.example  debug_llm.py  debug_patch.py  debug_validation.py  demo_alert.json  e2e_log.txt  e2e_log_utf8.txt  prompt.md  pyproject.toml  requirements.txt  runsteps.md  temp.py  test_github.py  test_runner.py
.github/workflows/: ci.yml
agents/: run_band_agents.py
backend/: __init__.py  agent_context.py  agent_loop.py  agent_names.py  alert_normalize.py  alert_sanitize.py  band_adapter.py  band_runtime.py  configuration.py  deploy_security.py  docker_health.py  fix_export.py  git_output.py  inference.py  main.py  metrics.py  repo_access.py  repo_stack.py  run_store.py  schemas.py
band_incident_response.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  ChangesTab.tsx  InputTab.tsx  ReportTab.tsx  types.ts
scripts/: e2e_ws_pipeline.py  start.ps1  start.sh
services/: __init__.py
tests/: _parse_diff_py.py  conftest.py  test_alert_normalize.py  test_band_adapter.py  test_band_collaboration.py  test_demo_endpoint.py  test_docker_and_deploy.py  test_fix_export.py  test_git_output.py  test_inference_guardrails.py  test_lifecycle_docker.py  test_main_api.py  test_orchestrator_finalize.py  test_orchestrator_validation.py  test_repo_access.py  test_repo_stack.py  test_ui_parse_diff.py  test_webhook_auth.py
(+6 files in other folders)
