[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "band-incident-response"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "band-sdk>=0.1.0",
  "docker>=7.1.0",
  "fastapi>=0.115.0",
  "openai>=1.55.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
